# learn-opengl

./: Cargo.toml
src/: main.rs  obj.rs
src/shaders/: fragment.glsl  vertex.glsl
