[package]
name = "learn-opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
gl = "0.14.0"
# glutin = "0.30.7"
glfw = "0.51"
ultraviolet = { version = "0.9.0", features = ["bytemuck"] }

[dev-dependencies]
imagine = "0.0.5"
